# support-agent-one

./: .env.example  .env.test  .gitignore  AI-Integration-Tasks.md  Makefile  Plan.md  README.md  Tasks.md  pyproject.toml  pytest.ini  setup_env.py  stack.md
.cursor/rules/: project-wiki.mdc  rule-one.mdc
Project-Wiki/: ApplicationLayerChunking.md  ChatInterface.md  ConversationManagement.md  DocumentManagement.md  DocumentProcessing.md  Observability.md  OpenAI.md  SearchThresholds.md  Supabase.md  VectorSearch.md  index.md  template.md
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/api/routes/: agent.py
app/api/v1/: __init__.py  chat.py  customers.py  documents.py  metrics.py  products.py
app/config/: ai_settings.py  init_env.py  settings.py
app/data/: __init__.py
app/models/: __init__.py  agent.py
app/scripts/: import_docs.py  setup_db.py
app/services/: __init__.py  agent_service.py  chat_service.py  conversation_manager.py  document_processor.py  document_retrieval.py  document_service.py  document_storage.py  openai_service.py  search_service.py  search_utils.py  supabase_service.py
app/templates/: base.html  index.html
app/templates/chat/: history.html  index.html
app/templates/documents/: create.html  edit.html  index.html  search.html  upload.html  view.html
app/tests/: test_conversation_manager.py  test_document_processor.py  test_document_retrieval.py  test_integration.py  test_search_utils.py
app/utils/: context_manager.py  document_processor.py  embedding_pipeline.py  logger.py  observability.py  openai_client.py  rate_limiter.py  search_utils.py  text_chunker.py  vector_db.py  vector_search.py
app/web/: __init__.py  chat.py  documents.py
db/migrations/: 01_document_matching_function.sql  02_documents_table.sql
docs/: ENV_CONFIG.md  Tasks.md  application-layer-chunking-plan.md
migrations/: README.md  create_match_document_chunks_function.sql  setup_document_search.sql
scripts/: apply_migration.py
tests/: __init__.py  conftest.py
tests/helpers/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_chat_service.py  test_document_processor.py  test_logfire.py  test_openai.py  test_supabase.py  test_vector_db.py
