[project]
name = "support-agent-one"
version = "0.1.0"
description = "Support Agent with document search and customer history"
authors = [
    {name = "Tony Krueger"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic-ai>=0.1.0",
    "pydantic-logfire>=0.1.0",
    "fastapi>=0.104.0",
    "openai>=1.0.0",
    "supabase>=1.0.0",
    "langchain>=0.0.267",
    "pypdf2>=3.0.0",
    "pdfminer.six>=20221105",
    "beautifulsoup4>=4.12.0",
    "nltk>=3.8.0",
    "spacy>=3.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
